# MediaMatrix

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat
config/: default.conf
include/: item_dialog.h
include/mediamatrix/core/: mediamatrix.h  mm_wrapper.h  types.h
include/mediamatrix/gui/: mm_item_dialog.h  mm_main_window.h
src/c/: collector_wrapper.c
src/cobol/: collector.cob  mediamatrix.cob
src/core/: mm_wrapper.c
src/cpp/: collector_gui.cpp  item_dialog.cpp
src/gui/: main.cpp  mm_item_dialog.cpp  mm_main_window.cpp
